apps/rbnis/components/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rbnis
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
      sectionName: https
  hostnames:
    - "rbn.is"
  rules:
    - backendRefs:
        - name: rbnis
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rbnis-wildcard-redirect
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
      sectionName: https
  hostnames:
    - "*.rbn.is"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: rbn.is
            statusCode: 302
